--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
             content="width=device-width,initial-scale=1.0"
         />
         <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
-        <title>Emphasoft Authentication</title>
+        <title>Emphasoft</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
         <noscript>
-            <strong>
+
         </noscript>
         <div id="app"></div>
         <!-- built files will be auto injected -->
